# mpi_wrapper

./: CMakeLists.txt  LICENSE  README.md
include/: mpi_wrapper.hpp
test/: CMakeLists.txt  install_gtest.cmake  test.cpp
